--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/yourmixjnr-bg.jpg") center right no-repeat;
+  background-color: #171717;
   background-size: cover;
   left: 0;
   right: 0;
@@ -442,30 +442,25 @@ section .container {
 }
 
 .counts .count-box {
-  padding: 30px 30px 25px 30px;
+  padding: 30px;
   width: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   text-align: center;
   background: rgba(255, 255, 255, 0.08);
 }
 
 .counts .count-box i {
-  position: absolute;
-  top: 1px;
-  left: 50%;
-  transform: translateX(-50%);
+  width: fit-content;
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
   color: #18d26e;
   border-radius: 50px;
-}
-
-.counts .count-box span {
-  font-size: 36px;
-  display: block;
-  font-weight: 600;
-  color: #fff;
 }
 
 .counts .count-box p {
